src/test/ui/in-band-lifetimes/elided-lifetimes.stderr
error: implicit lifetime parameters in types are deprecated
  --> $DIR/elided-lifetimes.rs:16:12
   |
LL | fn foo(x: &Foo) {
   |            ^^^
   |
note: lint level defined here
  --> $DIR/elided-lifetimes.rs:12:9
   |
LL | #![deny(elided_lifetimes_in_paths)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

